<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/profile"
        android:layout_height="143dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/grey_100"
        app:layout_aspectRatio="150%"
        app:layout_widthPercent="100%">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:text="@string/SensorDataTitle"
            android:textSize="@dimen/ld_side_margin" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginStart="16dp"
            android:text="@string/sensor_data_description"
            android:textSize="@dimen/tab_label" />

        <Switch
            android:id="@+id/wifi_togle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/togle2" />

        <Switch
            android:id="@+id/telephony_togle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:text="@string/togle3" />

        <Switch
            android:id="@+id/location_togle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textView2"
            android:text="@string/togle1" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/info_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/profile"
        android:layout_marginTop="2dp"
        android:scrollbars="vertical" />

</android.support.percent.PercentRelativeLayout>